Refactor website structure and implement blog functionality
- Updated index.html to reflect a new blog layout and removed personal details.
- Added blogs.js for rendering blog posts from a manifest file.
- Removed main.js as it was no longer needed.
- Created post.html for individual blog post display.
- Added resume.html to showcase professional details in a structured format.
- Improved meta tags and styles for better SEO and user experience.

--- a/post.html
+++ b/post.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width,initial-scale=1">
-    <title>Xiang Yang's Blog</title>
+    <title>Post - Xiang Yang's Blog</title>
     <link rel="stylesheet" href="css/styles.css">
-    <meta name="description" content="Personal blog by Xiang Yang.">
+    <meta name="description" content="Blog post">
 </head>
 
 <body>
@@ -16,7 +16,6 @@
                 <div class="logo">XY</div>
                 <div>
                     <div class="title">Xiang Yang's Blog</div>
-                    <div class="subtitle">My thoughts and ideas around AI, Robotics and Technology.</div>
                 </div>
             </div>
             <nav class="nav">
@@ -25,11 +24,13 @@
             </nav>
         </header>
 
-        <section class="hero">
-            <h1 style="margin:0 0 0.25rem 0">Blogs</h1>
-        </section>
-
-        <section class="blogs" id="posts"></section>
+        <main>
+            <article id="post">
+                <div id="post-meta"></div>
+                <div id="post-content">Loading post…</div>
+            </article>
+            <p class="back-link"><a href="index.html">← Back to posts</a></p>
+        </main>
     </div>
     <script src="js/blogs.js" defer></script>
 </body>
